--- a/src/assets/output.css
+++ b/src/assets/output.css
@@ -1511,6 +1511,11 @@ video {
   border-bottom-color: rgb(75 85 99 / var(--tw-border-opacity, 1));
 }
 
+.\!border-b-gold {
+  --tw-border-opacity: 1 !important;
+  border-bottom-color: rgb(255 206 0 / var(--tw-border-opacity, 1)) !important;
+}
+
 .\!bg-black {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1)) !important;
@@ -1594,6 +1599,26 @@ video {
 .bg-yellow-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(250 204 21 / var(--tw-bg-opacity, 1));
+}
+
+.bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 96 191 / var(--tw-bg-opacity, 1));
+}
+
+.\!bg-gold {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(255 206 0 / var(--tw-bg-opacity, 1)) !important;
+}
+
+.\!bg-success {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(19 111 62 / var(--tw-bg-opacity, 1)) !important;
+}
+
+.\!bg-gray {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity, 1)) !important;
 }
 
 .bg-gradient-to-tr {
@@ -2126,6 +2151,11 @@ video {
 
 .hover\:bg-opacity-90:hover {
   --tw-bg-opacity: 0.9;
+}
+
+.hover\:text-light:hover {
+  --tw-text-opacity: 1;
+  color: rgb(248 250 252 / var(--tw-text-opacity, 1));
 }
 
 .hover\:underline:hover {
