--- a/src/assets/output.css
+++ b/src/assets/output.css
@@ -1386,6 +1386,21 @@ video {
   border-top-right-radius: 0.5rem;
 }
 
+.rounded-b-full {
+  border-bottom-right-radius: 9999px;
+  border-bottom-left-radius: 9999px;
+}
+
+.rounded-b-xl {
+  border-bottom-right-radius: 0.75rem;
+  border-bottom-left-radius: 0.75rem;
+}
+
+.rounded-b-2xl {
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+
 .rounded-tl-lg {
   border-top-left-radius: 0.5rem;
 }
