--- a/src/assets/output.css
+++ b/src/assets/output.css
@@ -616,8 +616,8 @@ video {
   position: sticky;
 }
 
-.-bottom-2 {
-  bottom: -0.5rem;
+.-bottom-6 {
+  bottom: -1.5rem;
 }
 
 .-right-2 {
@@ -765,6 +765,10 @@ video {
   margin-bottom: 1.5rem;
 }
 
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
 .ml-2 {
   margin-left: 0.5rem;
 }
@@ -789,20 +793,12 @@ video {
   margin-right: 0.5rem;
 }
 
-.mt-0 {
-  margin-top: 0px;
-}
-
 .mt-1 {
   margin-top: 0.25rem;
 }
 
 .mt-10 {
   margin-top: 2.5rem;
-}
-
-.mt-14 {
-  margin-top: 3.5rem;
 }
 
 .mt-2 {
@@ -872,12 +868,12 @@ video {
   display: none;
 }
 
-.\!h-12 {
-  height: 3rem !important;
+.aspect-square {
+  aspect-ratio: 1 / 1;
 }
 
-.\!h-14 {
-  height: 3.5rem !important;
+.\!h-12 {
+  height: 3rem !important;
 }
 
 .\!h-2 {
@@ -956,10 +952,6 @@ video {
   height: 2rem;
 }
 
-.h-\[100px\] {
-  height: 100px;
-}
-
 .h-\[120vh\] {
   height: 120vh;
 }
@@ -992,6 +984,10 @@ video {
   height: 65px;
 }
 
+.h-\[70px\] {
+  height: 70px;
+}
+
 .h-auto {
   height: auto;
 }
@@ -1004,24 +1000,16 @@ video {
   height: 100vh;
 }
 
-.h-\[\] {
-  height: ;
-}
-
 .max-h-80 {
   max-height: 20rem;
 }
 
-.min-h-screen {
-  min-height: 100vh;
-}
-
-.min-h-\[150vh\] {
-  min-height: 150vh;
-}
-
 .min-h-\[120vh\] {
   min-height: 120vh;
+}
+
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .\!w-10 {
@@ -1030,10 +1018,6 @@ video {
 
 .\!w-12 {
   width: 3rem !important;
-}
-
-.\!w-14 {
-  width: 3.5rem !important;
 }
 
 .\!w-2 {
@@ -1108,6 +1092,10 @@ video {
   width: 2rem;
 }
 
+.w-\[100\%\] {
+  width: 100%;
+}
+
 .w-\[100px\] {
   width: 100px;
 }
@@ -1142,6 +1130,10 @@ video {
 
 .max-w-md {
   max-width: 28rem;
+}
+
+.flex-1 {
+  flex: 1 1 0%;
 }
 
 .flex-shrink-0 {
@@ -1272,6 +1264,10 @@ video {
   gap: 0.75rem;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
@@ -1333,10 +1329,6 @@ video {
   overflow: hidden;
 }
 
-.overflow-y-auto {
-  overflow-y: auto;
-}
-
 .overflow-y-scroll {
   overflow-y: scroll;
 }
@@ -1365,10 +1357,6 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
 }
 
 .rounded-b-lg {
@@ -1410,10 +1398,6 @@ video {
   border-width: 2.5px;
 }
 
-.border-\[3px\] {
-  border-width: 3px;
-}
-
 .border-b {
   border-bottom-width: 1px;
 }
@@ -1443,14 +1427,14 @@ video {
   border-color: rgb(220 38 38 / var(--tw-border-opacity, 1)) !important;
 }
 
-.\!border-gold {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(255 206 0 / var(--tw-border-opacity, 1)) !important;
-}
-
 .\!border-green-500 {
   --tw-border-opacity: 1 !important;
   border-color: rgb(34 197 94 / var(--tw-border-opacity, 1)) !important;
+}
+
+.\!border-primary {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(2 96 191 / var(--tw-border-opacity, 1)) !important;
 }
 
 .\!border-success {
@@ -1466,6 +1450,11 @@ video {
 .border-\[\#808080\] {
   --tw-border-opacity: 1;
   border-color: rgb(128 128 128 / var(--tw-border-opacity, 1));
+}
+
+.border-\[\#b6b6b6\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(182 182 182 / var(--tw-border-opacity, 1));
 }
 
 .border-danger {
@@ -1510,6 +1499,11 @@ video {
 .border-yellow-500 {
   --tw-border-opacity: 1;
   border-color: rgb(234 179 8 / var(--tw-border-opacity, 1));
+}
+
+.border-\[\#dd3333\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(221 51 51 / var(--tw-border-opacity, 1));
 }
 
 .\!border-b-gold {
@@ -1607,6 +1601,11 @@ video {
   background-color: rgb(248 250 252 / var(--tw-bg-opacity, 1));
 }
 
+.bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 96 191 / var(--tw-bg-opacity, 1));
+}
+
 .bg-secondary {
   --tw-bg-opacity: 1;
   background-color: rgb(1 173 236 / var(--tw-bg-opacity, 1));
@@ -1622,9 +1621,9 @@ video {
   background-color: rgb(250 204 21 / var(--tw-bg-opacity, 1));
 }
 
-.bg-primary {
+.bg-\[\#dd3333\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(2 96 191 / var(--tw-bg-opacity, 1));
+  background-color: rgb(221 51 51 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gradient-to-tr {
@@ -1643,11 +1642,6 @@ video {
 
 .fill-current {
   fill: currentColor;
-}
-
-.object-contain {
-  -o-object-fit: contain;
-     object-fit: contain;
 }
 
 .object-cover {
@@ -1853,6 +1847,14 @@ video {
   font-size: 100px;
 }
 
+.text-\[10px\] {
+  font-size: 10px;
+}
+
+.text-\[12px\] {
+  font-size: 12px;
+}
+
 .text-\[13px\] {
   font-size: 13px;
 }
@@ -1897,10 +1899,6 @@ video {
   font-weight: 100;
 }
 
-.capitalize {
-  text-transform: capitalize;
-}
-
 .leading-4 {
   line-height: 1rem;
 }
@@ -1940,6 +1938,11 @@ video {
 .\!text-red-500 {
   --tw-text-opacity: 1 !important;
   color: rgb(239 68 68 / var(--tw-text-opacity, 1)) !important;
+}
+
+.\!text-white {
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1)) !important;
 }
 
 .\!text-yellow-500 {
@@ -2007,6 +2010,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.text-\[\#dd3333\] {
+  --tw-text-opacity: 1;
+  color: rgb(221 51 51 / var(--tw-text-opacity, 1));
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -2029,6 +2037,12 @@ video {
 
 .opacity-75 {
   opacity: 0.75;
+}
+
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-lg {
@@ -2149,11 +2163,6 @@ video {
   background-color: rgb(1 173 236 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-yellow-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(202 138 4 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:bg-opacity-90:hover {
   --tw-bg-opacity: 0.9;
 }
@@ -2162,8 +2171,10 @@ video {
   text-decoration-line: underline;
 }
 
-.hover\:opacity-90:hover {
-  opacity: 0.9;
+.hover\:shadow-lg:hover {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .focus\:border-secondary:focus {
@@ -2182,12 +2193,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-.focus\:ring-4:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
 .focus\:ring-blue-500:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity, 1));
@@ -2203,17 +2208,18 @@ video {
   --tw-ring-color: rgb(19 111 62 / var(--tw-ring-opacity, 1));
 }
 
-.focus\:ring-yellow-300:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(253 224 71 / var(--tw-ring-opacity, 1));
-}
-
 .disabled\:cursor-not-allowed:disabled {
   cursor: not-allowed;
 }
 
 .disabled\:opacity-50:disabled {
   opacity: 0.5;
+}
+
+@media (min-width: 640px) {
+  .sm\:flex-row {
+    flex-direction: row;
+  }
 }
 
 @media (min-width: 768px) {
